--- a/public/index.html
+++ b/public/index.html
@@ -21,24 +21,11 @@
         Learn how to configure a non-root public URL by running `npm run build` or
         have a look at the documentation https://create-react-app.dev/docs/using-the-public-folder/.
       -->
-    <title>SoPra FS24 - Group XX</title>
+    <title>Mario After Party 30</title>
 </head>
-
 <body>
 <noscript>
-    You need to enable JavaScript to run this app.
+    Please enable JavaScript to run this app.
 </noscript>
 <div id="app"></div>
-<!--
-    This HTML file is a template.
-    If you open it directly in the browser, you will see an empty page.
-
-    You can add webfonts, meta tags, or analytics to this file.
-    The build step will place the bundled scripts into the <body> tag.
-
-    To begin the development, run `npm run dev`.
-    To create a production bundle, use `npm run build`.
-  -->
-</body>
-
-</html>
+</body></html>
